s3_modem_read/test/submission2.test
_id: 5c73f64b6779dd56677c5adb
archive: 5c73f64d6779dd56677c5adc
courseid: LSINF1252
custom: {}
grade: 0.0
input:
    '@lang': en
    '@random': []
    '@state': ''
    '@username': croquet
    modem: |-
        int *buf_len;
        modem_read(buf,buf_len);
        return 1;
problems: {}
response_type: rst
result: failed
state: ''
status: done
stderr: ''
stdout: ''
submitted_on: 2019-02-25 15:06:03.611000
taskid: modem_read
tests:
    not_compile: true
text: |+
    La compilation de votre code a échoué. Voici le message de sortie de la commande ``make`` :

    .. code-block::

        gcc -Wall -Werror -DC99 -std=gnu99 -ICTester -c -o tests.o tests.c
        gcc -Wall -Werror -DC99 -std=gnu99 -ICTester -c -o student_code.o student_code.c
        student_code.c: In function ‘has_42’:
        student_code.c:10:11: error: ‘buf_len’ is used uninitialized in this function [-Werror=uninitialized]
         modem_read(buf,buf_len);
                   ^
        cc1: all warnings being treated as errors
        make: *** [student_code.o] Error 1

username:
- croquet
